    (Paul Yang via zshao)

    HIVE-1147. Update Eclipse project configuration to match Checkstyle
    (Carl Steinbach via zshao)

    HIVE-1117. Make queryPlan serializable
    (Zheng Shao via namit)

    HIVE-917. Bucketed Map Join
    (He Yongqiang via namit)

    HIVE-1178. enforce bucketing for a table.
    (Namit Jain via He Yongqiang)

  IMPROVEMENTS

    HIVE-983. Function from_unixtime takes long.
    (Ning Zhang via zshao)

    HIVE-990. Incorporate CheckStyle into Hive's build.xml.
    (Carl Steinbach via zshao)

    HIVE-1081. Automated source code cleanup - Part 1.
    (Carl Steinbach via zshao)

    HIVE-1081. Automated source code cleanup - Part 2 - serde.
    (Carl Steinbach via zshao)

    HIVE-1081. Automated source code cleanup - Part 3 - ql.
    (Carl Steinbach via zshao)

    HIVE-1084. Capitalize first letter of class names.
    (Carl Steinbach via zshao)

    HIVE-1112. Replace instances of StringBuffer and Vector with StringBuilder
    and ArrayList. (Carl Steinbach via zshao)

    HIVE-1105. Add service script for starting metastore server.
    (John Sichi via zshao)

    HIVE-1109. Structured temporary directories
    (Zheng Shao via Ning Zhang)

    HIVE-1068. CREATE VIEW followup: add a 'table type' enum attribute in
    metastore's MTable. (John Sichi via zshao)

    HIVE-1104. Suppress Checkstyle warnings for generated files.
    (Carl Steinbach via zshao)

    HIVE-1128. Let max/min handle complex types like struct
    (Zheng Shao via Ning Zhang)

    HIVE-1103. Add .gitignore file. (Carl Steinbach via zshao)

    HIVE-1132. Add metastore API method to get partition by name.
    (Paul Yang via zshao)

    HIVE-1120. In ivy offline mode, don't delete downloaded jars.
    (John Sichi via zshao)

    HIVE-862. CommandProcessor should return DriverResponse.
    (Bill Graham via zshao)

    HIVE-1123. Checkstyle fixes. (Carl Steinbach via zshao)

    HIVE-1150. Add comment to explain why we check for dir first in add_partitions().