@@ -1604,6 +1604,11 @@ name|toString
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|dis
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 block|}
 specifier|public
 name|void
@@ -3107,6 +3112,29 @@ argument_list|(
 literal|true
 argument_list|)
 expr_stmt|;
+name|SessionState
+name|oldSs
+init|=
+name|SessionState
+operator|.
+name|get
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|oldSs
+operator|!=
+literal|null
+condition|)
+block|{
+name|oldSs
+operator|.
+name|out
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 name|SessionState
 operator|.
 name|start
